# CutCellCGAL

./: CMakeLists.txt
src/: cutfem3d.cpp  cutfem3dv1.cpp  cutfem3dv2.cpp  ex1.cpp  ex2.cpp  findCutcellsCGAL.h  findCutcellsCGAL2.h  findCutcellsVTK.h  headersBasic.h  headersBoost.h  makefile  polygonmesh.cpp  readMeshCreatVTKfile.cpp  utilfuns.h
